--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
 		    	<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 		    		<form role="form">
 		    			<fieldset>
-		    				<h2>Accede a tu cuenta</h2>
+		    				<h2>Accede a tu cuenta...</h2>
 		    				<hr class="colorgraph">
 		    				<div class="form-group">
 		    				<input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address">
