--- a/login.html
+++ b/login.html
@@ -2,16 +2,18 @@
 <html lang="en">
 
 <head>
+
 	<script type="text/javascript">(function() {
-												var walkme = document.createElement('script'); 
-												walkme.type = 'text/javascript'; 
-												walkme.async = true; 
-												walkme.src = 'https://cdn.walkme.com/users/25d54bafa21f49dca439bbbfa89dbdf9/walkme_25d54bafa21f49dca439bbbfa89dbdf9_https.js'; 
-												var s = document.getElementsByTagName('script')[0]; 
-												s.parentNode.insertBefore(walkme, s); 
-												window._walkmeConfig = {smartLoad:true}; 
-											}
-									)();
+					var walkme = document.createElement('script'); 
+					walkme.type = 'text/javascript'; 
+					walkme.async = true; 
+					walkme.src = 'https://cdn.walkme.com/users/25d54bafa21f49dca439bbbfa89dbdf9/walkme_25d54bafa21f49dca439bbbfa89dbdf9_https.js'; 
+					var s = document.getElementsByTagName('script')[0]; 
+					s.parentNode.insertBefore(walkme, s); 
+					window._walkmeConfig = {smartLoad:true}; 
+	})();</script>
+									
+									
 	</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -81,7 +83,7 @@
 		    	<div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 		    		<form role="form">
 		    			<fieldset>
-		    				<h2>Accede a tu cuenta...</h2>
+		    				<h2>Accede a tu cuenta</h2>
 		    				<hr class="colorgraph">
 		    				<div class="form-group">
 		    				<input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address">
