--- a/somos.html
+++ b/somos.html
@@ -3,6 +3,16 @@
 
 <head>
 
+	<script type="text/javascript">(function() {
+					var walkme = document.createElement('script'); 
+					walkme.type = 'text/javascript'; 
+					walkme.async = true; 
+					walkme.src = 'https://cdn.walkme.com/users/25d54bafa21f49dca439bbbfa89dbdf9/walkme_25d54bafa21f49dca439bbbfa89dbdf9_https.js'; 
+					var s = document.getElementsByTagName('script')[0]; 
+					s.parentNode.insertBefore(walkme, s); 
+					window._walkmeConfig = {smartLoad:true}; 
+	})();</script>
+	
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
